force-app/main/default/objects/Goal_Investment__c/Goal_Investment__c.object-meta.xml
<CustomObject>
    <label>Goal Investment</label>
    <nameField>
        <displayFormat>GI-{00000}</displayFormat>
        <label>Goal Investment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Investments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>