force-app/main/default/objects/Goal_Investment__c/fields/ETF__c.field-meta.xml
<CustomField>
    <fullName>ETF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ETF</label>
    <referenceTo>ETF__c</referenceTo>
    <relationshipLabel>Goal Investments</relationshipLabel>
    <relationshipName>Goal_Investments</relationshipName>
    <type>Lookup</type>
</CustomField>