force-app/main/default/objects/Goal_Investment__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Goal Investments</relationshipLabel>
    <relationshipName>Goal_Investments</relationshipName>
    <type>Lookup</type>
</CustomField>