force-app/main/default/objects/Goal_Investment__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Goal Investments</relationshipLabel>
    <relationshipName>Goal_Investments</relationshipName>
    <type>Lookup</type>
</CustomField>