force-app/main/default/objects/Goal_Investment__c/recordTypes/ETF_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ETF_Record_Type</fullName>
    <active>true</active>
    <label>ETF Record Type</label>
</RecordType>