force-app/main/default/objects/Goal_Investment__c/recordTypes/Fund_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Fund_Record_Type</fullName>
    <active>true</active>
    <label>Fund Record Type</label>
</RecordType>